# reOrgTools

./: .project  CertFiles  CopyFiles.sh  CopyFilesCommon.sh  LinkMakeFiles.sh  README.md  RmvSrcFiles.py  dev_cert  readme  wst_cert
CMakeLists/: CMakeLists.txt  CMakeListsCfg.txt  CMakeListsCmomCryptFips.txt  CMakeListsComPost.txt  CMakeListsComSwitch.txt  CMakeListsInterface.txt  CMakeListsLibsFox.txt  CMakeListsLibsTok.txt  CMakeListsLibsXml.txt  CMakeListsOpaid.txt  CMakeListsSwitch.txt  CMakeListsToolsConfig.txt  CMakeListsToolsUtl.txt
CMakeListsORIG/: CMakeLists.txt  CMakeListsAPPL.txt  CMakeListsCORE.txt  CMakeListsCfg6.txt  CMakeListsInterfaces.txt  CMakeListsMisc.txt  CMakeListsOpaid.txt  CMakeListsShrfips140.txt  CMakeListsShrfox.txt  CMakeListsShrtoken.txt  CMakeListsShrxml.txt  CMakeListsUtil.txt
TimsFiles/: copyExe.sh  makeHeaders.sh
